@@ -168,33 +168,61 @@ Returns Wikibase::Datatype::MediainfoSnak instance.
  use Wikibase::Datatype::MediainfoStatement;
  use Wikibase::Datatype::Value::Item;
  use Wikibase::Datatype::Value::String;
- use Wikibase::Datatype::Value::Time;
 
  # Object.
  my $obj = Wikibase::Datatype::MediainfoStatement->new(
          'id' => 'M123$00C04D2A-49AF-40C2-9930-C551916887E8',
 
-         # instance of (P31) human (Q5)
+         # creator (P170)
          'snak' => Wikibase::Datatype::MediainfoSnak->new(
-                  'datavalue' => Wikibase::Datatype::Value::Item->new(
-                          'value' => 'Q5',
-                  ),
-                  'property' => 'P31',
+                  'property' => 'P170',
+                  'snaktype' => 'novalue',
          ),
          'property_snaks' => [
-                 # of (P642) alien (Q474741)
+                 # Wikimedia username (P4174): Lviatour
+                 Wikibase::Datatype::MediainfoSnak->new(
+                          'datavalue' => Wikibase::Datatype::Value::String->new(
+                                  'value' => 'Lviatour',
+                          ),
+                          'property' => 'P4174',
+                 ),
+
+                 # URL (P2699): https://commons.wikimedia.org/wiki/user:Lviatour
+                 Wikibase::Datatype::MediainfoSnak->new(
+                          'datavalue' => Wikibase::Datatype::Value::String->new(
+                                  'value' => 'https://commons.wikimedia.org/wiki/user:Lviatour',
+                          ),
+                          'property' => 'P2699',
+                 ),
+
+                 # author name string (P2093): Lviatour
+                 Wikibase::Datatype::MediainfoSnak->new(
+                          'datavalue' => Wikibase::Datatype::Value::String->new(
+                                  'value' => 'Lviatour',
+                          ),
+                          'property' => 'P2093',
+                 ),
+
+                 # object has role (P3831): photographer (Q33231)
                  Wikibase::Datatype::MediainfoSnak->new(
                           'datavalue' => Wikibase::Datatype::Value::Item->new(
-                                  'value' => 'Q474741',
+                                  'value' => 'Q33231',
                           ),
-                          'property' => 'P642',
+                          'property' => 'P3831',
                  ),
          ],
  );
 
  # Print out.
  print 'Id: '.$obj->id."\n";
- print 'Statement: '.$obj->snak->property.' -> '.$obj->snak->datavalue->value."\n";
+ print 'Statement: '.$obj->snak->property.' -> ';
+ if ($obj->snak->snaktype eq 'value') {
+         print $obj->snak->datavalue->value."\n";
+ } elsif ($obj->snak->snaktype eq 'novalue') {
+         print "-\n";
+ } elsif ($obj->snak->snaktype eq 'somevalue') {
+         print "?\n";
+ }
  print "Qualifiers:\n";
  foreach my $property_snak (@{$obj->property_snaks}) {
          print "\t".$property_snak->property.' -> '.
@@ -204,9 +232,12 @@ Returns Wikibase::Datatype::MediainfoSnak instance.
 
  # Output:
  # Id: M123$00C04D2A-49AF-40C2-9930-C551916887E8
- # Statement: P31 -> Q5
+ # Statement: P170 -> -
  # Qualifiers:
- #         P642 -> Q474741
+ #         P4174 -> Lviatour
+ #         P2699 -> https://commons.wikimedia.org/wiki/user:Lviatour
+ #         P2093 -> Lviatour
+ #         P3831 -> Q33231
  # Rank: normal
 
 =head1 DEPENDENCIES
