@@ -9,7 +9,6 @@ TODO
 45. Predelat priklad v dokumentaci Mediainfo na jeho realny obsah.
 46. Proverit dokumentaci snak, ze jsou povinnosti hodnot spravne. Kdyz je tam if
     v checku, tak to je potreba upravit.
-47. Predelat priklad v MediainfoStatement
 48.
 
 Applied
@@ -147,3 +146,6 @@ NONE [20201223] skim
 44. Pridat MediaInfo
 https://commons.wikimedia.org/wiki/Special:EntityData/M72261258.json
 OK [20210125] skim
+
+47. Predelat priklad v MediainfoStatement
+OK [20210126] skim
